[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/level11/level11.gd" type="Script" id=1]
[ext_resource path="res://game/circle.tscn" type="PackedScene" id=2]
[ext_resource path="res://bullets/Lifespan.tscn" type="PackedScene" id=3]

[node name="Node2D" instance=ExtResource( 2 )]

[node name="Spawners" parent="." index="0"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="Spawners" index="1"]
wait_time = 5.0
autostart = true

[node name="Timer2" type="Timer" parent="Spawners" index="2"]
wait_time = 5.0
autostart = true

[node name="Lifespan" parent="." index="3" instance=ExtResource( 3 )]
margin_right = 600.0
margin_bottom = 600.0
life = 20.0

[connection signal="timeout" from="Spawners/Timer" to="Spawners" method="_on_Timer_timeout"]
[connection signal="timeout" from="Spawners/Timer2" to="Spawners" method="_on_Timer2_timeout"]
